tests/integration/errors/test_struct_undefined_field_type.sn
# Error test: undefined field type

struct Config =>
    name: str
    data: UndefinedType

fn main(): void =>
    print("Should not compile\n")
